--- a/template/templates/mckerlie/sass/template-ie.scss
+++ b/template/templates/mckerlie/sass/template-ie.scss
@@ -9,20 +9,10 @@
 // @import "forms-tight";
 // @import "forms-loose";
 
-@import "grid";
-@import "grid-960"; // TODO: always include 960gs;
 @import "layout";
 @import "modules";
 @import "menu";
 
 @import "styles";
+@import "content";
 @import "com_content";
-
-// @media queries
-// @import "grid-320";
-@import "styles-320";
-@import "styles-480";
-// @import "grid-760";
-@import "styles-760";
-@import "styles-960";
-// don't load 1100, assume std desktop
