--- a/template/templates/mckerlie/sass/modules.scss
+++ b/template/templates/mckerlie/sass/modules.scss
@@ -7,3 +7,13 @@
 	font-weight: 300;
 }
 
+.logo {
+	float: left;
+	width: 219px;
+	height: 114px;
+
+	img {
+		margin-top: -90px;
+		margin-left: -240px;
+	}
+}
