--- a/template/templates/mckerlie/sass/elements.scss
+++ b/template/templates/mckerlie/sass/elements.scss
@@ -1,7 +1,10 @@
 /* elements */
 body, select, input, textarea {
-	color: #444; /* off black */
+	color: #ffffff;
 	font-family: Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 1.5em;
 }
 
 * { 
