--- a/template/templates/mckerlie/sass/elements.scss
+++ b/template/templates/mckerlie/sass/elements.scss
@@ -37,3 +37,15 @@ a:hover {
 	color: teal;
 	text-decoration: underline;
 }
+
+
+.item-page ul {
+	margin-left: 30px;
+	padding: 0;
+
+	li {
+		list-style: none;
+		background: url('../images/list_arrow.png') left 2px no-repeat;
+		padding-left: 15px;
+	}
+}
