--- a/template/templates/mckerlie/css/template-ie.css
+++ b/template/templates/mckerlie/css/template-ie.css
@@ -366,46 +366,54 @@ table {
 
 /* elements */
 body, select, input, textarea {
-  color: #444;
-  /* off black */
-  font-family: Helvetica, Arial, sans-serif; }
+  color: #ffffff;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.5em; }
 
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  *behavior: url(/templates/default/resources/boxsizing.htc); }
+  *behavior: url(/templates/mckerlie/resources/boxsizing.htc); }
 
 /* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: bold; }
+  font-weight: 600;
+  font-family: "purista-web";
+  color: #f0b310; }
 
 h1 {
-  font-size: 2em; }
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: uppercase; }
 
 h2 {
-  font-size: 1.8em; }
+  font-size: 18px; }
 
 h3 {
-  font-size: 1.6em; }
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif; }
 
 h4 {
   font-size: 1.4em; }
 
-h5 {
-  font-size: 1.2em; }
-
-h6 {
-  font-size: 1.0em; }
-
 a, a:active, a:visited {
-  color: red;
+  color: #f0b310;
   text-decoration: none; }
 
 a:hover {
-  color: teal;
   text-decoration: underline; }
+
+.item-page ul {
+  margin-left: 30px;
+  padding: 0; }
+  .item-page ul li {
+    list-style: none;
+    background: url("../images/list_arrow.png") left 2px no-repeat;
+    padding-left: 15px; }
 
 /* forms */
 /* Align checkboxes, radios, text inputs with their label by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
@@ -446,168 +454,75 @@ button {
   width: auto;
   overflow: visible; }
 
-/*
-Grids should be setup using the following structure:
-
-div.container
-	div.fluid-row-12
-		div.span-3
-		div.span-6
-		div.span-3
-	div.fluid-row-16
-		div.span-6
-		div.span-10
-
-*/
 .container {
-  margin: 0 auto;
-  padding: 0 10px; }
+  width: 960px;
+  padding: 0 10px;
+  margin: 0 auto; }
 
-.container {
-  width: 960px; }
+body {
+  background: #2f200e url("../images/bg_body-inner.jpg") center 0 no-repeat; }
+  body.home {
+    background: #2f200e url("../images/bg_body.jpg") center 18px no-repeat; }
 
-.row-12 {
-  margin-left: -20px; }
-  .row-12:before, .row-12:after {
-    content: "";
-    display: table; }
-  .row-12:after {
-    clear: both; }
-  .row-12 {
-    zoom: 1; }
-  .row-12 div[class*="span"] {
-    float: left;
-    margin-left: 20; }
-  .row-12 .span-1 {
-    width: 60px; }
-  .row-12 .span-2 {
-    width: 140px; }
-  .row-12 .span-3 {
-    width: 220px; }
-  .row-12 .span-4 {
-    width: 300px; }
-  .row-12 .span-5 {
-    width: 380px; }
-  .row-12 .span-6 {
-    width: 460px; }
-  .row-12 .span-7 {
-    width: 540px; }
-  .row-12 .span-8 {
-    width: 620px; }
-  .row-12 .span-9 {
-    width: 700px; }
-  .row-12 .span-10 {
-    width: 780px; }
-  .row-12 .span-11 {
-    width: 860px; }
-  .row-12 .span-12 {
-    width: 940px; }
+#wrapper {
+  min-width: 960px; }
+  #wrapper > div {
+    background: url("../images/bg_header-repeat.png") top center repeat-x; }
 
-.row-16 {
-  margin-left: -20px; }
-  .row-16:before, .row-16:after {
-    content: "";
-    display: table; }
-  .row-16:after {
-    clear: both; }
-  .row-16 {
-    zoom: 1; }
-  .row-16 div[class*="span"] {
-    float: left;
-    margin-left: 20; }
-  .row-16 .span-1 {
-    width: 40px; }
-  .row-16 .span-2 {
-    width: 100px; }
-  .row-16 .span-3 {
-    width: 160px; }
-  .row-16 .span-4 {
-    width: 220px; }
-  .row-16 .span-5 {
-    width: 280px; }
-  .row-16 .span-6 {
-    width: 340px; }
-  .row-16 .span-7 {
-    width: 400px; }
-  .row-16 .span-8 {
-    width: 460px; }
-  .row-16 .span-9 {
-    width: 520px; }
-  .row-16 .span-10 {
-    width: 580px; }
-  .row-16 .span-11 {
-    width: 640px; }
-  .row-16 .span-12 {
-    width: 700px; }
-  .row-16 .span-13 {
-    width: 760px; }
-  .row-16 .span-14 {
-    width: 820px; }
-  .row-16 .span-15 {
-    width: 880px; }
-  .row-16 .span-16 {
-    width: 940px; }
+#header {
+  padding: 49px 0 25px 0;
+  background: url("../images/divider.png") bottom center repeat-x; }
+  .home #header {
+    background: none; }
 
-.row-24 {
-  margin-left: -20px; }
-  .row-24:before, .row-24:after {
-    content: "";
-    display: table; }
-  .row-24:after {
-    clear: both; }
-  .row-24 {
-    zoom: 1; }
-  .row-24 div[class*="span"] {
-    float: left;
-    margin-left: 20; }
-  .row-24 .span-1 {
-    width: 20px; }
-  .row-24 .span-2 {
-    width: 60px; }
-  .row-24 .span-3 {
-    width: 100px; }
-  .row-24 .span-4 {
-    width: 140px; }
-  .row-24 .span-5 {
-    width: 180px; }
-  .row-24 .span-6 {
-    width: 220px; }
-  .row-24 .span-7 {
-    width: 260px; }
-  .row-24 .span-8 {
-    width: 300px; }
-  .row-24 .span-9 {
-    width: 340px; }
-  .row-24 .span-10 {
-    width: 380px; }
-  .row-24 .span-11 {
-    width: 420px; }
-  .row-24 .span-12 {
-    width: 460px; }
-  .row-24 .span-13 {
-    width: 500px; }
-  .row-24 .span-14 {
-    width: 540px; }
-  .row-24 .span-15 {
-    width: 580px; }
-  .row-24 .span-16 {
-    width: 620px; }
-  .row-24 .span-17 {
-    width: 660px; }
-  .row-24 .span-18 {
-    width: 700px; }
-  .row-24 .span-19 {
-    width: 740px; }
-  .row-24 .span-20 {
-    width: 780px; }
-  .row-24 .span-21 {
-    width: 820px; }
-  .row-24 .span-22 {
-    width: 860px; }
-  .row-24 .span-23 {
-    width: 900px; }
-  .row-24 .span-24 {
-    width: 940px; }
+#content {
+  background: url("../images/divider.png") bottom center repeat-x;
+  padding: 0 0 25px 0; }
+
+#footer {
+  font-size: 12px;
+  color: #f0b310;
+  padding: 20px 0; }
+
+#copyright {
+  background: url("../images/divider.png") top center repeat-x;
+  font-family: "purista-web";
+  overflow: auto;
+  padding-top: 20px; }
+
+.module h3 {
+  font-family: "purista-web";
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 300; }
+
+.logo {
+  float: left;
+  width: 219px;
+  height: 114px; }
+  .logo img {
+    margin-top: -90px;
+    margin-left: -240px; }
+
+.masthead img {
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.5); }
+
+.module.portfolio div.custom {
+  margin-left: -18px; }
+.module.portfolio .sigProContainer {
+  padding: 0 !important;
+  overflow: visible; }
+  .module.portfolio .sigProContainer li {
+    margin: 0 0 8px 18px;
+    background: inherit;
+    box-shadow: 2px 2px 9px rgba(0, 0, 0, 0.75); }
+    .module.portfolio .sigProContainer li span.sigProLinkOuterWrapper {
+      padding: 0;
+      background: none; }
+    .module.portfolio .sigProContainer li span.sigProLinkWrapper {
+      padding: 0;
+      border: 0;
+      margin: 0; }
 
 .hmenu .menu {
   margin: 0;
@@ -629,6 +544,39 @@ div.container
   padding: 0; }
   .hmenu ul ul li {
     white-space: nowrap; }
+
+.primary-menu {
+  font-family: "purista-web", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.8);
+  float: right;
+  margin-top: 84px; }
+  .primary-menu .menu > li {
+    padding: 0 0 0 30px; }
+    .primary-menu .menu > li:first-child {
+      padding-left: 0; }
+  .primary-menu a {
+    color: #ffffff; }
+    .primary-menu a:hover {
+      color: #f0b310;
+      text-decoration: none; }
+
+.secondary-menu {
+  margin-bottom: 10px; }
+  .secondary-menu .menu > li {
+    padding: 0 8px;
+    line-height: 1em;
+    border-left: 1px solid #ffffff; }
+    .secondary-menu .menu > li:first-child {
+      padding-left: 0;
+      border-left: none; }
+  .secondary-menu a {
+    color: #ffffff; }
+    .secondary-menu a:hover {
+      color: #f0b310;
+      text-decoration: none; }
 
 .vmenu .menu {
   margin: 0;
@@ -663,34 +611,5 @@ div.container
   color: #fff;
   text-shadow: none; }
 
-.phone-visible, .mobile-visible,
-.tablet-hidden, .desktop-hidden {
-  display: block; }
-
-.tablet-visible, .desktop-visible,
-.phone-hidden, .mobile-hidden {
-  display: none; }
-
-.tablet-visible, .mobile-visible,
-.phone-hidden, .desktop-hidden {
-  display: block; }
-
-.phone-visible, .desktop-visible,
-.tablet-hidden, .mobile-hidden {
-  display: none; }
-
-.tablet-visible, .mobile-visible,
-.desktop-visible, .phone-hidden {
-  display: block; }
-
-.phone-visible, .tablet-hidden
-.mobile-hidden, .desktop-hidden {
-  display: none; }
-
-.desktop-visible, .phone-hidden,
-.tablet-hidden, .mobile-hidden {
-  display: block; }
-
-.phone-visible, .tablet-visible,
-.mobile-visible, .desktop-hidden {
-  display: none; }
+.gold {
+  color: #f0b310; }
