icon-arrow class

--- a/template/templates/mckerlie/css/content.css
+++ b/template/templates/mckerlie/css/content.css
@@ -1,2 +1,10 @@
 .gold {
   color: #f0b310; }
+
+.icon-arrow {
+  float: right;
+  background: url("../images/icon_arrow.png") right center no-repeat;
+  padding-right: 18px;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1; }
