--- a/template/templates/mckerlie/sass/elements.scss
+++ b/template/templates/mckerlie/sass/elements.scss
@@ -35,6 +35,7 @@ h2 { font-size: 18px; }
 h3 { 
 	font-size: 14px;
 	font-family: Helvetica, Arial, sans-serif;
+	margin-bottom: .5em;
 }
 
 h4 { font-size: 1.4em; }
@@ -45,6 +46,10 @@ a, a:active, a:visited {
 }
 a:hover {
 	text-decoration: underline;
+}
+
+p {
+	margin-top: 0;
 }
 
 
