transition on links

--- a/template/templates/mckerlie/sass/elements.scss
+++ b/template/templates/mckerlie/sass/elements.scss
@@ -43,6 +43,7 @@ h4 { font-size: 1.4em; }
 a, a:active, a:visited {
 	color: $gold;
 	text-decoration: none;
+	@include transition(color .3s ease-in);
 }
 a:hover {
 	text-decoration: underline;
