--- a/template/templates/mckerlie/sass/content.scss
+++ b/template/templates/mckerlie/sass/content.scss
@@ -7,9 +7,19 @@
 
 .icon-arrow {
 	float: right;
+	font-size: 16px;
 	background: url('../images/icon_arrow.png') right center no-repeat;
 	padding-right: 18px;
 	display: inline-block;
 	*display: inline;
 	*zoom: 1;
+	margin: 1em 0;
+
+	a {
+		color: #ffffff;
+		&:hover {
+			color: $gold;
+			text-decoration: none;
+		}
+	}
 }
