--- a/template/templates/mckerlie/css/content.css
+++ b/template/templates/mckerlie/css/content.css
@@ -8,8 +8,7 @@
   padding-right: 18px;
   display: inline-block;
   *display: inline;
-  *zoom: 1;
-  margin: 1em 0; }
+  *zoom: 1; }
   .icon-arrow a {
     color: #ffffff; }
     .icon-arrow a:hover {
