--- a/template/templates/mckerlie/sass/layout.scss
+++ b/template/templates/mckerlie/sass/layout.scss
@@ -9,10 +9,30 @@ html {
 }
 
 body {
-	background: #2f200e url('../images/bg_body-inner.jpg') center 0 no-repeat;
+	background-image: url('../images/bg_body-inner.jpg');
+	background-color: #2f200e;
+	background-position: center 0;
+	background-repeat: no-repeat;
 
 	&.home {
-		background: #2f200e url('../images/bg_body.jpg') center 17px no-repeat;
+		background-image: url('../images/bg_body.jpg');
+		background-position: center 17px;
+	}
+
+	&.portfolio {
+		background-image: url('../images/bg_body-inner2.jpg');
+	}
+
+	&.design-services {
+		background-image: url('../images/bg_body-inner6.jpg');
+	}
+
+	&.quality-products-services {
+		background-image: url('../images/bg_body-inner4.jpg');
+	}
+
+	&.contact {
+		background-image: url('../images/bg_body-inner5.jpg');
 	}
 }
 
