--- a/template/templates/mckerlie/sass/menu.scss
+++ b/template/templates/mckerlie/sass/menu.scss
@@ -11,7 +11,7 @@
 		*display: inline;
 		*zoom: 1;
 		position: relative;
-	
+
 		padding: 0 5px;
 	}
 
@@ -47,7 +47,10 @@
 	margin-top: 84px;
 
 	.menu > li {
+		position: relative;
 		padding: 0 0 0 26px;
+
+
 		&:first-child {
 			padding-left: 0;
 		}
@@ -59,6 +62,26 @@
 			color: $gold;
 			text-decoration: none;
 		}
+	}
+
+	ul ul {
+		//display: none;
+		opacity: 0;
+
+		position: absolute;
+		top: 100%;
+		left: 26px;
+		margin: 0 0 0 -0.5em;
+		padding: 0.25em 0.5em;
+
+		list-style: none;
+
+		@include transition(opacity .2s ease-in);
+	}
+
+	li:hover ul {
+		//display: block;
+		opacity: 1;
 	}
 }
 
